# OpenAvnu

./: .gitignore  .gitmodules  802.1Q_QOS_ENHANCEMENT_SUMMARY.md  ADMIN_VS_USER_COMPARISON_ANALYSIS.md  ARCHITECTURAL_CONFUSION_PREVENTION.md  ARCHITECTURE_DEVIATIONS_COMPREHENSIVE.md  ARCHITECTURE_DEVIATIONS_REPORT.md  ARCHITECTURE_GAP_ANALYSIS_REPORT.md  AVDECC_COMPATIBILITY_ASSESSMENT.md  AVDECC_DEBUG_PRIORITY_PLAN.md  AVDECC_PROTOCOL_COMPLIANCE_REFACTOR.md  AVTP_PIPELINE_PROFILE_INTEGRATION_COMPLETE.md  AVTP_PROFILE_IMPLEMENTATION_COMPLETE.md  BASELINE_SYNC_REPORT.md  BUILD_SUCCESS_CONFIRMATION.md  CI_BUILD_CONFIGURATION_FIX.md  CI_FINAL_ANALYSIS.md  CI_FIX_VERIFICATION_SUMMARY.md  CI_PIPELINE_FIX_VERIFICATION.md  CI_UNICODE_FIX_SUMMARY.md  CMakeLists.txt  CMakeLists_Milan_v1_2.txt  CMakeLists_Phase2B_Test.txt  CMakeLists_TSN_Test.txt  CMakeLists_test_aem.txt  CMakeLists_test_ieee_1722_2016.txt  CMakeLists_test_phase2.txt  CMakeLists_test_working.txt  COMMIT_SUMMARY_COMPLETE.md  COMPILER_WARNING_FIXES_COMPLETE_REPORT.md  COMPLETE_AVB_ENTITY_SUCCESS_REPORT.md  COMPLETE_AVB_MULTI_INSTANCE_SUCCESS_REPORT.ps1  COMPLETE_BUILD_SUCCESS_FINAL.md  CORRECTED_INTEL_HAL_INTEGRATION.md  CORRECTED_INTEL_HARDWARE_TIMESTAMPING_ARCHITECTURE.md  DAEMON_MODERNIZATION_BUILD_VERIFICATION_REPORT.md  DAEMON_MODERNIZATION_READY_FOR_COMMIT.md  DAW02_COMPLETE_SUCCESS_REPORT.md  DAW02_TESTING_PLAN.md  DIRECTORY_STRUCTURE_FIX_SUMMARY.md  (+300 more)
daemons/common/tests/: CMakeLists.txt
daemons/maap/: CMakeLists.txt  README.rst
daemons/maap/common/: maap_intel_hal.c  maap_intel_hal.h  maap_log.h  maap_log_queue.c  (+1 more)
daemons/mrpd/: CMakeLists.txt  mmrp.c  mrp.h  mrpd.c  mrpd.h  mrpw.c  mrpw.h  msrp.c  mvrp.c  que.h
daemons/shaper/: CMakeLists.txt
examples/: CMakeLists.txt  CMakeLists_new.txt  CMakeLists_old.txt  Makefile.la_avdecc_test  Makefile.phase2_test  Makefile.phase3_test  Makefile.profile_framework  acmp_protocol_example.cpp  automotive_video_talker_profile.ini  avb_audio_bridge.c  avdecc_controller_responsive.cpp  avtp_profile_integration_example.cpp  build_hive_compatible_entity.bat  build_raw_ethernet_avdecc.bat  complete_avb_entity_cmake_integration.cpp  complete_avb_entity_integration.cpp  complete_avb_entity_integration_full.cpp  complete_avb_entity_standards_integration.cpp  complete_avb_entity_with_intel_driver.cpp  config_la_avdecc_milan.ini  enhanced_avdecc_entity.c  full_avdecc_entity.c  gptp_hal_integration_example.c  hive_compatible_avdecc_entity.c  i219_vlan_qos_example.c  i219_vlan_qos_example_corrected.c  ieee_standards_integration_demo.cpp  la_avdecc_integration_example.c  milan_audio_talker_profile.ini  milan_avdecc_entity_example.cpp  phase2_entity_discovery_test.c  phase3_unified_avdecc_test.c  proav_audio_talker_profile.ini  professional_avdecc_entity.c  profile_framework_example.c  profile_framework_examples.ini  protocol_test_CMakeLists.txt  raw_ethernet_avdecc_entity.c  real_avdecc_entity.c  simple_avb_audio_bridge.c  (+6 more)
examples/asio-listener/: DAEMON_DEPENDENCIES_GUIDE.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_ENHANCED.md  SETUP_GUIDE.md  asio_config.ini  asio_listener.c  asio_listener_config.ini  asio_stub.h  build.bat  build_simple.bat  corrected_i219_test.ps1  debug_adapter.ps1  debug_i219.ps1  debug_i219_final.ps1  debug_maap_daemon.ps1  detect_multi_intel.ps1  final_i219_test.ps1  find_pcap_device.ps1  manual_compile.ps1  manual_compile_clean.ps1  pcap_stub.h  setup.bat  setup_enhanced.ps1  simple_asio_listener.c  simple_asio_startup.ps1  simple_i219_test.ps1  simple_interface_test.ps1  start_asio_with_autodetect.ps1  start_openavnu_corrected.ps1  start_openavnu_daemons.ps1  start_openavnu_daemons_fixed.ps1  start_openavnu_final.ps1  start_openavnu_multi_adapter.ps1  test_asio_listener_autostart.bat  test_enhanced.bat  test_i219_autodetect.ps1  test_i219_detection.bat  (+3 more)
examples/clock_quality_demo/: CMakeLists.txt  clock_quality_demo.cpp  config_demo.cpp  gptp_log_stub.cpp  gptp_log_stub.hpp
examples/common/: talker_mrp_client.c
examples/hive_avdecc/: CMakeLists.txt
examples/windows-audio-interface/: windows_audio_interface.c
lib/avdecc-entities/: CMakeLists.txt
lib/avtp_pipeline/: CMakeLists.txt  CMakeLists_unified_avdecc.txt  avtp_profile.cpp  intel_hal_compatibility.h  intel_tsn_integration.c  intel_tsn_integration.h  intel_tsn_integration.h.backup  intel_tsn_integration_corrected.c  minimal_tsn_test.c  real_tsn_test.c  simple_tsn_test.c  test_intel_tsn_integration.c
phase3_demo/: CMakeLists.txt  phase3_production_test.c
test/clock_quality/: CMakeLists.txt  gptp_log_stub.cpp  simple_test_framework.cpp  simple_test_main.cpp  test_ingress_monitor.cpp  test_profile_compliance.cpp
test_aem/: CMakeLists.txt  test_aem_checksum.cpp
test_phase2/: CMakeLists.txt
testing/: CMakeLists.txt  README.md
testing/daemons/: test_daemon_intel_hal_integration.ps1
testing/docs/: MIGRATION_GUIDE.md
testing/hardware/: comprehensive_tsn_production.c  comprehensive_tsn_test.c  comprehensive_tsn_test_clean.c  comprehensive_tsn_working.c  comprehensive_tsn_working_bup.c  simple_working_tsn_test.c
testing/integration/: AVTP_PHASE3_PRODUCTION_TEST_DOCUMENTATION.md  CMakeLists.txt  avtp_phase3_production_test.c  phase2_backend_integration_prototype.c  test_avtp_profile_validation.cpp
testing/performance/: CMakeLists.txt  phase2_baseline_measurement.c
testing/unified/: README.md  REPOSITORY_RULES_COMPLIANCE.md  generic_adapter_test_config.json  generic_adapter_testing_framework.ps1  intel_hal_integration_test.ps1  phase4_comprehensive_test.ps1  phase4_intel_hal_comprehensive_test.ps1  quick_test.bat
tests/: CMakeLists.txt  corrected_tsn_test.c  unified_tsn_test.c
tests/hardware/: phase1_driver_interface.ps1  phase1_interface_detection.ps1  phase1_network_communication.ps1  phase1_results.md  run_phase1_simple.ps1  run_phase1_tests.ps1  unified_test_framework.ps1
tests/intel_hal/: CMakeLists.txt  intel_hal_validation_test.c  intel_hal_validation_test.cpp
tests/results/: phase1_test_report_20250711_212040.md
(+1411 files in other folders)
